objects/MPM4_BASE__Milestone1_Task__c.object
<CustomObject>
    <fields>
        <fullName>MPM4_BASE__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for completing the task. Defaults to current user if left blank.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Blocked_Reason__c</fullName>
        <inlineHelpText>If blocked, why?</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Class__c</fullName>
        <inlineHelpText>Classify this task as appropriate for your use.</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The status of this task. A task is either in-complete or complete.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Days_Late_Formula__c</fullName>
        <formula>Today() -  MPM4_BASE__Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Days_Late__c</fullName>
        <inlineHelpText>How many days late is this task? If the task is not late, this field will always show 0 days late, regardless of how much days you have until the due date. If you want to show the # of days in reserve up until the due date, use Days Late Formula.</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Description__c</fullName>
        <inlineHelpText>The general description of the task. For example, what is the purpose of the task.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Due_Date__c</fullName>
        <inlineHelpText>The date this task is due to be completed. Defaults to milestone due date if left blank.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Expense__c</fullName>
        <inlineHelpText>The estimated amount of expenses which will be incurred during the task.</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Hours__c</fullName>
        <inlineHelpText>The estimated time to complete the task.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Exclude_Weekend_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically maintained by Milestones PM+ when the Project Configuration page is used to set this flag. Changing this flag manually does not influence the schedule.</inlineHelpText>
        <label>Exclude Weekend Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Expense_Balance__c</fullName>
        <formula>MPM4_BASE__Estimated_Expense__c - MPM4_BASE__Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated expense - total expense</inlineHelpText>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Hours_Balance__c</fullName>
        <formula>MPM4_BASE__Estimated_Hours__c - MPM4_BASE__Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated hours - total hours</inlineHelpText>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Index_Helper__c</fullName>
        <formula>MPM4_BASE__Assigned_To__r.FirstName &amp; &apos; &apos; &amp; MPM4_BASE__Assigned_To__r.LastName &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(MPM4_BASE__Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>The date the last email was attached to this task. A task can be created via an email, and additional emails can be attached to the task in the notes section.</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Grandparent__c</fullName>
        <formula>if (
 MPM4_BASE__Project_Milestone__r.MPM4_BASE__Parent_Milestone__c != null, 
 MPM4_BASE__Project_Milestone__r.MPM4_BASE__Parent_Milestone__r.Name , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Grandparent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Overall_Status__c</fullName>
        <formula>if ( MPM4_BASE__Complete__c == true, &apos;Complete&apos;,
  if ( and( MPM4_BASE__Days_Late_Formula__c &gt; 0,  MPM4_BASE__Blocked__c  ),
    if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(MPM4_BASE__Task_Stage__c), &apos;Late &amp; Blocked&apos;),
    if (MPM4_BASE__Days_Late_Formula__c &gt; 0,  
      if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(MPM4_BASE__Task_Stage__c), &apos;Late&apos;),
      if(MPM4_BASE__Blocked__c == true, 
        if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(MPM4_BASE__Task_Stage__c), &apos;Blocked&apos;), 
        if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(MPM4_BASE__Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__OwnerId__c</fullName>
        <formula>MPM4_BASE__Project_Milestone__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Task_Import_Id__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Priority__c</fullName>
        <inlineHelpText>This is the priority of the task. 0,1,2,3 or 4.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ProjectId__c</fullName>
        <formula>MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ProjectStatus__c</fullName>
        <formula>TEXT(MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.MPM4_BASE__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Owner_Email__c</fullName>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__c, MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name,&apos;_self&apos;)</formula>
        <inlineHelpText>A link to the Project which this task is included in via its milestone.</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Short_ID__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>When should this task start by?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Task_Number__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Task_Stage__c</fullName>
        <inlineHelpText>Where is this task on the road to completion?</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense__c</fullName>
        <inlineHelpText>Calculated from all child expense records</inlineHelpText>
        <label>Total Expense</label>
        <summarizedField>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Amount__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours__c</fullName>
        <inlineHelpText>Calculated from all child time records</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>MPM4_BASE__Milestone1_Time__c.MPM4_BASE__Hours__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Time__c.MPM4_BASE__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>MPM4_BASE__CannotBeBlockedIfComplete</fullName>
        <active>true</active>
        <errorConditionFormula>if (And ( MPM4_BASE__Blocked__c == true, MPM4_BASE__Complete__c == true), true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Blocked__c</errorDisplayField>
        <errorMessage>You cannot mark a completed task as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__CannotBeCompleteIfBlocked</fullName>
        <active>true</active>
        <errorConditionFormula>if (and ( MPM4_BASE__Complete__c == true,  MPM4_BASE__Blocked__c ==true), true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Complete__c</errorDisplayField>
        <errorMessage>You cannot complete a task marked as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Due_Date_Greater_Than_Milestone_Deadline</fullName>
        <active>false</active>
        <errorConditionFormula>MPM4_BASE__Due_Date__c &gt;  MPM4_BASE__Project_Milestone__r.MPM4_BASE__Deadline__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be smaller than Milestone Deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Due_Date_Smaller_Than_Milestone_Kickoff</fullName>
        <active>false</active>
        <errorConditionFormula>MPM4_BASE__Due_Date__c &lt;  MPM4_BASE__Project_Milestone__r.MPM4_BASE__Kickoff__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Milestone Kickoff Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Must_be_blank_if_not_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(MPM4_BASE__Blocked__c == false, len( MPM4_BASE__Blocked_Reason__c ) &gt; 0) , True, False)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Blocked_Reason__c</errorDisplayField>
        <errorMessage>Must be blank if &quot;blocked&quot; is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Must_not_be_blank_if_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(MPM4_BASE__Blocked__c == true, len( MPM4_BASE__Blocked_Reason__c ) == 0) , True, False)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Blocked_Reason__c</errorDisplayField>
        <errorMessage>If this task is blocked you must enter a reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Start_Date_More_Than_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>if (and(!isblank(MPM4_BASE__Start_Date__c), !isblank(MPM4_BASE__Due_Date__c)), true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>